actions: fix running tests on win

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
           pip install pytest
       - name: Run Tests
         run: |
-          pytest ./tests/*.py
+          pytest ./tests/testglyphdata.py
