Move Usmallstroke (uni1D7E) to GF_Phonetics_APA
- Remove Usmallstroke from GF_Latin_African
- Add Usmallstroke from GF_Phonetics_APA
- Change prod-name of Usmallstroke to uni1D7E

--- a/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
+++ b/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
@@ -352,6 +352,7 @@
 			<string>lambda</string>
 			<string>phi</string>
 			<string>Cstroke</string>
+			<string>Usmallstroke</string>
 			<string>cstroke</string>
 			<string>ezhcaron</string>
 			<string>lambdastroke</string>
