--- a/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
+++ b/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
@@ -896,28 +896,111 @@
 		<key>list</key>
 		<array>
 			<string>apostrophemod</string>
+			<string>lambda</string>
+			<string>chi</string>
+			<string>dotbelowcomb</string>
+			<string>Astroke</string>
+			<string>Cstroke</string>
+			<string>Emacronacute</string>
+			<string>Emacrongrave</string>
+			<string>Eopen</string>
 			<string>Etilde</string>
 			<string>Schwa</string>
 			<string>Ezh</string>
 			<string>Ezhcaron</string>
 			<string>Gcaron</string>
+			<string>Glottalstop</string>
 			<string>Gmacron</string>
 			<string>Gstroke</string>
+			<string>Hdotbelow</string>
+			<string>Icaron</string>
+			<string>Idotbelow</string>
+			<string>Istroke</string>
 			<string>Itilde</string>
+			<string>Kacute</string>
 			<string>Kcaron</string>
+			<string>Kdotbelow</string>
+			<string>Kmacronbelow</string>
+			<string>Lbar</string>
+			<string>Ldotbelow</string>
+			<string>Lmiddletilde</string>
+			<string>Mdotbelow</string>
+			<string>Ndotbelow</string>
+			<string>Nmacronbelow</string>
+			<string>Ocaron</string>
+			<string>Omacronacute</string>
+			<string>Omacrongrave</string>
+			<string>Oogonek</string>
+			<string>Oogonekmacron</string>
+			<string>Oopen</string>
 			<string>Saltillo</string>
+			<string>Sdotbelow</string>
+			<string>Tdiagonalstroke</string>
+			<string>Tmacronbelow</string>
+			<string>Ucaron</string>
+			<string>Upsilon-latin</string>
 			<string>Utilde</string>
+			<string>Gamma-latin</string>
+			<string>Zcircumflex</string>
+			<string>Zmacronbelow</string>
+			<string>Ismall</string>
+			<string>astroke</string>
+			<string>chi-latin</string>
+			<string>cstroke</string>
+			<string>emacronacute</string>
+			<string>emacrongrave</string>
+			<string>eopen</string>
 			<string>etilde</string>
 			<string>schwa</string>
 			<string>ezh</string>
 			<string>ezhcaron</string>
+			<string>gamma-latin</string>
 			<string>gcaron</string>
+			<string>glottalstop</string>
+			<string>glottalstopreversed</string>
 			<string>gmacron</string>
 			<string>gstroke</string>
+			<string>hdotbelow</string>
+			<string>icaron</string>
+			<string>idotbelow</string>
+			<string>iota-latin</string>
+			<string>istroke</string>
 			<string>itilde</string>
+			<string>kacute</string>
 			<string>kcaron</string>
+			<string>kdotbelow</string>
+			<string>kmacronbelow</string>
+			<string>lambdastroke</string>
+			<string>lbar</string>
+			<string>lbelt</string>
+			<string>ldotbelow</string>
+			<string>lmiddletilde</string>
+			<string>mdotbelow</string>
+			<string>ndotbelow</string>
+			<string>nmacronbelow</string>
+			<string>ocaron</string>
+			<string>omacronacute</string>
+			<string>omacrongrave</string>
+			<string>oogonek</string>
+			<string>oogonekmacron</string>
+			<string>oopen</string>
 			<string>saltillo</string>
+			<string>sdotbelow</string>
+			<string>tdiagonalstroke</string>
+			<string>tmacronbelow</string>
+			<string>ucaron</string>
+			<string>upsilon-latin</string>
 			<string>utilde</string>
+			<string>zcircumflex</string>
+			<string>zmacronbelow</string>
+			<string>wmod</string>
+			<string>clickalveolar</string>
+			<string>zmod</string>
+			<string>commaabovecomb</string>
+			<string>macronbelowcomb</string>
+			<string>lowlinecomb</string>
+			<string>glottalstopmod</string>
+			<string>degree</string>
 			<string>Ccircumflex</string>
 			<string>Gcircumflex</string>
 			<string>Hcircumflex</string>
@@ -929,12 +1012,18 @@
 			<string>ccircumflex</string>
 			<string>gcircumflex</string>
 			<string>hcircumflex</string>
+			<string>idotless_ogonek</string>
+			<string>jcaron</string>
 			<string>jcircumflex</string>
 			<string>kgreenlandic</string>
 			<string>scircumflex</string>
 			<string>tbar</string>
 			<string>tcedilla</string>
 			<string>ytilde</string>
+			<string>ymod</string>
+			<string>thetamod</string>
+			<string>YturnedSansSerif</string>
+			<string>commaaboverightcomb</string>
 			<string>strokeshortcomb</string>
 			<string>primemod</string>
 			<string>verticallinemod</string>
@@ -954,6 +1043,16 @@
 			<string>dblverticalbar</string>
 			<string>kip</string>
 			<string>zero.zero</string>
+			<string>zero.tf</string>
+			<string>one.tf</string>
+			<string>two.tf</string>
+			<string>three.tf</string>
+			<string>four.tf</string>
+			<string>five.tf</string>
+			<string>six.tf</string>
+			<string>seven.tf</string>
+			<string>eight.tf</string>
+			<string>nine.tf</string>
 			<string>zero.dnom</string>
 			<string>one.dnom</string>
 			<string>two.dnom</string>
@@ -1076,16 +1175,6 @@
 			<string>rightWhiteSmallTriangle</string>
 			<string>downWhiteSmallTriangle</string>
 			<string>leftWhiteSmallTriangle</string>
-			<string>zero.tf</string>
-			<string>one.tf</string>
-			<string>two.tf</string>
-			<string>three.tf</string>
-			<string>four.tf</string>
-			<string>five.tf</string>
-			<string>six.tf</string>
-			<string>seven.tf</string>
-			<string>eight.tf</string>
-			<string>nine.tf</string>
 		</array>
 		<key>name</key>
 		<string>GF_Latin_Plus</string>
