Phonetics IPAStandard: beta and chi
This adds chi U+03C7 and beta-latin U+A7B5 to Phonetics/IPAStandard.

The IPA Handbook associates the IPA beta and IPA chi with the Greek
characters U+03B2 β and U+03C7 χ.
The Latin characters U+A7B5 ꞵ and U+AB53 ꭓ were added to Unicode since
then. Given that IPA uses latinized shapes, U+A7B5 and U+AB53 would be more
appropriate, or U+3B2 and U+03C7 should have the same Latin glyphs in the IPPH
language system.

--- a/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
+++ b/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
@@ -484,12 +484,14 @@
 			<string>apostrophemod</string>
 			<string>beta</string>
 			<string>theta</string>
+			<string>chi</string>
 			<string>dblverticalbar</string>
 			<string>undertie</string>
 			<string>overlinecomb</string>
 			<string>doublebrevebelowcomb</string>
 			<string>Ismall</string>
 			<string>alpha-latin</string>
+			<string>beta-latin</string>
 			<string>bhook</string>
 			<string>bilabialclick</string>
 			<string>chi-latin</string>
