--- a/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
+++ b/GF_glyphsets/Phonetics/glyphs/CustomFilter_GF_Phonetics.plist
@@ -57,7 +57,6 @@
 			<string>A</string>
 			<string>Aacute</string>
 			<string>Abreve</string>
-			<string>Acaron</string>
 			<string>Acircumflex</string>
 			<string>Adieresis</string>
 			<string>Agrave</string>
@@ -171,7 +170,6 @@
 			<string>a</string>
 			<string>aacute</string>
 			<string>abreve</string>
-			<string>acaron</string>
 			<string>acircumflex</string>
 			<string>adieresis</string>
 			<string>agrave</string>
@@ -379,6 +377,7 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>exclam</string>
 			<string>asterisk</string>
 			<string>exclamdown</string>
 			<string>Kturned</string>
