added okina to all lists and database

--- a/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
+++ b/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
@@ -535,6 +535,7 @@
 			<string>commaabovecomb</string>
 			<string>macronbelowcomb</string>
 			<string>lowlinecomb</string>
+			<string>commaturnedmod</string>
 			<string>glottalstopmod</string>
 			<string>Ccircumflex</string>
 			<string>Gcircumflex</string>
