--- a/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
+++ b/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
@@ -9,25 +9,13 @@
 			<string>Acaron</string>
 			<string>Acircumflexdotbelow</string>
 			<string>Adblgrave</string>
-			<string>Adieresismacron</string>
-			<string>Adotaccent</string>
-			<string>Adotmacron</string>
-			<string>Ainvertedbreve</string>
 			<string>Alpha-latin</string>
-			<string>Aringbelow</string>
-			<string>Astroke</string>
 			<string>AEmacron</string>
-			<string>Bdotaccent</string>
 			<string>Bdotbelow</string>
 			<string>Beta-latin</string>
 			<string>Bhook</string>
-			<string>Bmacronbelow</string>
 			<string>Bstroke</string>
-			<string>Ccedillaacute</string>
-			<string>Chi-latin</string>
 			<string>Chook</string>
-			<string>Cstroke</string>
-			<string>Dcedilla</string>
 			<string>Dcircumflexbelow</string>
 			<string>Ddotaccent</string>
 			<string>Ddotbelow</string>
@@ -35,46 +23,29 @@
 			<string>Dmacronbelow</string>
 			<string>Dtail</string>
 			<string>Ecedilla</string>
-			<string>Ecedillabreve</string>
-			<string>Ecircumflexbelow</string>
 			<string>Ecircumflexdotbelow</string>
 			<string>Edblgrave</string>
 			<string>Edotbelow</string>
-			<string>Einvertedbreve</string>
-			<string>Emacronacute</string>
-			<string>Emacrongrave</string>
 			<string>Eopen</string>
 			<string>Ereversed</string>
 			<string>Esh</string>
-			<string>Estroke</string>
 			<string>Etilde</string>
 			<string>Etildebelow</string>
 			<string>Schwa</string>
 			<string>Ezh</string>
-			<string>Ezhcaron</string>
 			<string>Ezhreversed</string>
-			<string>Fdotaccent</string>
 			<string>Fhook</string>
-			<string>Gacute</string>
 			<string>Gcaron</string>
 			<string>Ghook</string>
 			<string>Glottalstop</string>
-			<string>Gmacron</string>
 			<string>Gstroke</string>
-			<string>Hbrevebelow</string>
-			<string>Hcaron</string>
-			<string>Hcedilla</string>
-			<string>Hdieresis</string>
 			<string>Hdotaccent</string>
 			<string>Hdotbelow</string>
-			<string>Heng</string>
 			<string>Hhook</string>
 			<string>Hturned</string>
 			<string>Icaron</string>
 			<string>Idblgrave</string>
-			<string>Idieresisacute</string>
 			<string>Idotbelow</string>
-			<string>Iinvertedbreve</string>
 			<string>Iota-latin</string>
 			<string>Istroke</string>
 			<string>Itilde</string>
@@ -83,134 +54,70 @@
 			<string>Jstroke</string>
 			<string>Kacute</string>
 			<string>Kcaron</string>
-			<string>Kdotbelow</string>
 			<string>Khook</string>
 			<string>Kmacronbelow</string>
-			<string>Kstroke</string>
 			<string>Lbar</string>
-			<string>Lbelt</string>
 			<string>Lcircumflexbelow</string>
-			<string>Ldotbelow</string>
-			<string>Ldotbelowmacron</string>
-			<string>Ldoublebar</string>
-			<string>Lmacronbelow</string>
-			<string>Lmiddletilde</string>
 			<string>Macute</string>
-			<string>Mdotaccent</string>
-			<string>Mdotbelow</string>
 			<string>Mturned</string>
 			<string>Ncircumflexbelow</string>
 			<string>Ndotaccent</string>
 			<string>Ndotbelow</string>
 			<string>Ngrave</string>
 			<string>Nhookleft</string>
-			<string>Nlongrightleg</string>
 			<string>Nmacronbelow</string>
-			<string>OU</string>
 			<string>Ocaron</string>
 			<string>Ocenteredtilde</string>
 			<string>Ocircumflexdotbelow</string>
 			<string>Odblgrave</string>
-			<string>Odieresismacron</string>
-			<string>Odotaccent</string>
-			<string>Odotaccentmacron</string>
 			<string>Odotbelow</string>
-			<string>Oinvertedbreve</string>
-			<string>Omacronacute</string>
-			<string>Omacrongrave</string>
 			<string>Omega-latin</string>
-			<string>Oogonek</string>
-			<string>Oogonekmacron</string>
 			<string>Oopen</string>
 			<string>Oslashacute</string>
 			<string>Otildeacute</string>
 			<string>Otildedieresis</string>
-			<string>Otildemacron</string>
-			<string>Pacute</string>
-			<string>Pdotaccent</string>
 			<string>Phook</string>
 			<string>Pstroke</string>
-			<string>Qhooktail</string>
-			<string>Rdblgrave</string>
-			<string>Rdotaccent</string>
-			<string>Rdotbelow</string>
-			<string>Rdotbelowmacron</string>
-			<string>Rinvertedbreve</string>
-			<string>Rmacronbelow</string>
 			<string>Rstroke</string>
 			<string>Rtail</string>
-			<string>Sacutedotaccent</string>
 			<string>Saltillo</string>
-			<string>Scarondotaccent</string>
-			<string>Sdotaccent</string>
 			<string>Sdotbelow</string>
-			<string>Sdotbelowdotaccent</string>
 			<string>Tcircumflexbelow</string>
-			<string>Tdiagonalstroke</string>
-			<string>Tdotaccent</string>
 			<string>Tdotbelow</string>
 			<string>Thook</string>
 			<string>Tmacronbelow</string>
 			<string>Tretroflexhook</string>
 			<string>Ubar</string>
 			<string>Ucaron</string>
-			<string>Ucircumflexbelow</string>
 			<string>Udblgrave</string>
-			<string>Udieresisacute</string>
 			<string>Udieresisbelow</string>
-			<string>Udieresiscaron</string>
-			<string>Udieresisgrave</string>
-			<string>Udieresismacron</string>
 			<string>Udotbelow</string>
-			<string>Uinvertedbreve</string>
-			<string>Umacrondieresis</string>
 			<string>Upsilon-latin</string>
 			<string>Utilde</string>
 			<string>Utildeacute</string>
 			<string>Utildebelow</string>
 			<string>Gamma-latin</string>
-			<string>Vdotbelow</string>
 			<string>Vhook</string>
 			<string>Vtilde</string>
 			<string>Vturned</string>
-			<string>Wdotaccent</string>
-			<string>Wdotbelow</string>
 			<string>Whook</string>
-			<string>Xdieresis</string>
-			<string>Xdotaccent</string>
-			<string>Ydotaccent</string>
 			<string>Yhook</string>
-			<string>Ymacron</string>
 			<string>Ystroke</string>
-			<string>Zcircumflex</string>
 			<string>Zdotbelow</string>
 			<string>Zmacronbelow</string>
-			<string>Zstroke</string>
 			<string>Ismall</string>
 			<string>acaron</string>
 			<string>acircumflexdotbelow</string>
 			<string>adblgrave</string>
-			<string>adieresismacron</string>
-			<string>adotaccent</string>
 			<string>adotbelow</string>
-			<string>adotmacron</string>
-			<string>ainvertedbreve</string>
 			<string>alpha-latin</string>
-			<string>aringbelow</string>
-			<string>astroke</string>
 			<string>aemacron</string>
-			<string>bdotaccent</string>
 			<string>bdotbelow</string>
 			<string>beta-latin</string>
 			<string>bhook</string>
 			<string>bilabialclick</string>
-			<string>bmacronbelow</string>
 			<string>bstroke</string>
-			<string>ccedillaacute</string>
-			<string>chi-latin</string>
 			<string>chook</string>
-			<string>cstroke</string>
-			<string>dcedilla</string>
 			<string>dcircumflexbelow</string>
 			<string>ddotaccent</string>
 			<string>ddotbelow</string>
@@ -218,48 +125,30 @@
 			<string>dmacronbelow</string>
 			<string>dtail</string>
 			<string>ecedilla</string>
-			<string>ecedillabreve</string>
-			<string>ecircumflexbelow</string>
 			<string>ecircumflexdotbelow</string>
 			<string>edblgrave</string>
 			<string>edotbelow</string>
-			<string>einvertedbreve</string>
-			<string>emacronacute</string>
-			<string>emacrongrave</string>
 			<string>eopen</string>
 			<string>esh</string>
-			<string>estroke</string>
 			<string>etilde</string>
 			<string>etildebelow</string>
 			<string>eturned</string>
 			<string>schwa</string>
 			<string>ezh</string>
-			<string>ezhcaron</string>
 			<string>ezhreversed</string>
-			<string>fdotaccent</string>
-			<string>gacute</string>
 			<string>gamma-latin</string>
 			<string>gcaron</string>
 			<string>ghook</string>
 			<string>glottalstop</string>
-			<string>glottalstopreversed</string>
 			<string>glottalstopsmall</string>
-			<string>gmacron</string>
 			<string>gstroke</string>
-			<string>hbrevebelow</string>
-			<string>hcaron</string>
-			<string>hcedilla</string>
-			<string>hdieresis</string>
 			<string>hdotaccent</string>
 			<string>hdotbelow</string>
-			<string>heng</string>
 			<string>hhook</string>
 			<string>hturned</string>
 			<string>icaron</string>
 			<string>idblgrave</string>
-			<string>idieresisacute</string>
 			<string>idotbelow</string>
-			<string>iinvertedbreve</string>
 			<string>iota-latin</string>
 			<string>istroke</string>
 			<string>itilde</string>
@@ -268,22 +157,12 @@
 			<string>jstroke</string>
 			<string>kacute</string>
 			<string>kcaron</string>
-			<string>kdotbelow</string>
 			<string>khook</string>
 			<string>kmacronbelow</string>
-			<string>kstroke</string>
 			<string>lambdastroke</string>
 			<string>lbar</string>
-			<string>lbelt</string>
 			<string>lcircumflexbelow</string>
-			<string>ldotbelow</string>
-			<string>ldotbelowmacron</string>
-			<string>ldoublebar</string>
-			<string>lmacronbelow</string>
-			<string>lmiddletilde</string>
 			<string>macute</string>
-			<string>mdotaccent</string>
-			<string>mdotbelow</string>
 			<string>mturned</string>
 			<string>ncircumflexbelow</string>
 			<string>ndotaccent</string>
@@ -296,81 +175,40 @@
 			<string>ocaron</string>
 			<string>ocircumflexdotbelow</string>
 			<string>odblgrave</string>
-			<string>odieresismacron</string>
-			<string>odotaccent</string>
-			<string>odotaccentmacron</string>
 			<string>odotbelow</string>
-			<string>oinvertedbreve</string>
-			<string>omacronacute</string>
-			<string>omacrongrave</string>
 			<string>omega-latin</string>
-			<string>oogonek</string>
-			<string>oogonekmacron</string>
 			<string>oopen</string>
 			<string>oslashacute</string>
 			<string>otildeacute</string>
 			<string>otildedieresis</string>
-			<string>otildemacron</string>
-			<string>ou</string>
-			<string>pacute</string>
-			<string>pdotaccent</string>
 			<string>phook</string>
 			<string>pstroke</string>
-			<string>qhooktail</string>
-			<string>rdblgrave</string>
-			<string>rdotaccent</string>
-			<string>rdotbelow</string>
-			<string>rdotbelowmacron</string>
-			<string>rinvertedbreve</string>
-			<string>rmacronbelow</string>
 			<string>rstroke</string>
 			<string>rtail</string>
-			<string>sacutedotaccent</string>
 			<string>saltillo</string>
-			<string>scarondotaccent</string>
-			<string>sdotaccent</string>
 			<string>sdotbelow</string>
-			<string>sdotbelowdotaccent</string>
 			<string>tcircumflexbelow</string>
-			<string>tdiagonalstroke</string>
-			<string>tdotaccent</string>
 			<string>tdotbelow</string>
 			<string>thook</string>
 			<string>tmacronbelow</string>
 			<string>tretroflexhook</string>
 			<string>ubar</string>
 			<string>ucaron</string>
-			<string>ucircumflexbelow</string>
 			<string>udblgrave</string>
-			<string>udieresisacute</string>
 			<string>udieresisbelow</string>
-			<string>udieresiscaron</string>
-			<string>udieresisgrave</string>
-			<string>udieresismacron</string>
 			<string>udotbelow</string>
-			<string>uinvertedbreve</string>
-			<string>umacrondieresis</string>
 			<string>upsilon-latin</string>
 			<string>utilde</string>
 			<string>utildeacute</string>
 			<string>utildebelow</string>
-			<string>vdotbelow</string>
 			<string>vhook</string>
 			<string>vtilde</string>
 			<string>vturned</string>
-			<string>wdotaccent</string>
-			<string>wdotbelow</string>
 			<string>whook</string>
-			<string>xdieresis</string>
-			<string>xdotaccent</string>
-			<string>ydotaccent</string>
 			<string>yhook</string>
-			<string>ymacron</string>
 			<string>ystroke</string>
-			<string>zcircumflex</string>
 			<string>zdotbelow</string>
 			<string>zmacronbelow</string>
-			<string>zstroke</string>
 			<string>hmod</string>
 			<string>nmod</string>
 			<string>wmod</string>
@@ -413,12 +251,12 @@
 			<string>secondtonechinese</string>
 			<string>fourthtonechinese</string>
 			<string>commaturnedmod</string>
-			<string>glottalstopmod</string>
 			<string>ringhalfleft</string>
 			<string>ringhalfright</string>
 			<string>uniA7AE</string>
 			<string>uniA7B8</string>
 			<string>uniA7B9</string>
+			<string>dieresisbelowcomb</string>
 		</array>
 		<key>name</key>
 		<string>GF_Latin_African</string>
