--- a/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
+++ b/GF_glyphsets/Latin/glyphs/CustomFilter_GF_Latin.plist
@@ -80,7 +80,6 @@
 			<string>Pstroke</string>
 			<string>Rstroke</string>
 			<string>Rtail</string>
-			<string>Saltillo</string>
 			<string>Sdotbelow</string>
 			<string>Tcircumflexbelow</string>
 			<string>Tdotbelow</string>
@@ -105,6 +104,7 @@
 			<string>Ystroke</string>
 			<string>Zdotbelow</string>
 			<string>Zmacronbelow</string>
+			<string>Saltillo</string>
 			<string>Ismall</string>
 			<string>acaron</string>
 			<string>acircumflexdotbelow</string>
@@ -139,7 +139,6 @@
 			<string>gamma-latin</string>
 			<string>gcaron</string>
 			<string>ghook</string>
-			<string>glottalstop</string>
 			<string>glottalstopsmall</string>
 			<string>gstroke</string>
 			<string>hdotaccent</string>
@@ -185,7 +184,6 @@
 			<string>pstroke</string>
 			<string>rstroke</string>
 			<string>rtail</string>
-			<string>saltillo</string>
 			<string>sdotbelow</string>
 			<string>tcircumflexbelow</string>
 			<string>tdotbelow</string>
@@ -209,13 +207,15 @@
 			<string>ystroke</string>
 			<string>zdotbelow</string>
 			<string>zmacronbelow</string>
-			<string>hmod</string>
-			<string>nmod</string>
-			<string>wmod</string>
+			<string>saltillo</string>
 			<string>clickalveolar</string>
 			<string>clickdental</string>
 			<string>clicklateral</string>
 			<string>clickretroflex</string>
+			<string>glottalstop</string>
+			<string>hmod</string>
+			<string>nmod</string>
+			<string>wmod</string>
 			<string>umod</string>
 			<string>vmod</string>
 			<string>zmod</string>
@@ -235,6 +235,7 @@
 			<string>candraBinducomb</string>
 			<string>breveinvertedcomb</string>
 			<string>commaabovecomb</string>
+			<string>dieresisbelowcomb</string>
 			<string>ringbelowcomb</string>
 			<string>verticallinebelowcomb</string>
 			<string>circumflexbelowcomb</string>
@@ -256,7 +257,6 @@
 			<string>uniA7AE</string>
 			<string>uniA7B8</string>
 			<string>uniA7B9</string>
-			<string>dieresisbelowcomb</string>
 		</array>
 		<key>name</key>
 		<string>GF_Latin_African</string>
@@ -269,18 +269,12 @@
 			<string>chi</string>
 			<string>dotbelowcomb</string>
 			<string>Acaron</string>
-			<string>Astroke</string>
-			<string>Cstroke</string>
-			<string>Emacronacute</string>
-			<string>Emacrongrave</string>
 			<string>Eopen</string>
 			<string>Etilde</string>
 			<string>Schwa</string>
 			<string>Ezh</string>
-			<string>Ezhcaron</string>
 			<string>Gcaron</string>
 			<string>Glottalstop</string>
-			<string>Gmacron</string>
 			<string>Gstroke</string>
 			<string>Hdotbelow</string>
 			<string>Icaron</string>
@@ -289,47 +283,29 @@
 			<string>Itilde</string>
 			<string>Kacute</string>
 			<string>Kcaron</string>
-			<string>Kdotbelow</string>
 			<string>Kmacronbelow</string>
 			<string>Lbar</string>
-			<string>Ldotbelow</string>
-			<string>Lmiddletilde</string>
-			<string>Mdotbelow</string>
 			<string>Ndotbelow</string>
 			<string>Nmacronbelow</string>
 			<string>Ocaron</string>
-			<string>Omacronacute</string>
-			<string>Omacrongrave</string>
-			<string>Oogonek</string>
-			<string>Oogonekmacron</string>
 			<string>Oopen</string>
-			<string>Saltillo</string>
 			<string>Sdotbelow</string>
-			<string>Tdiagonalstroke</string>
 			<string>Tmacronbelow</string>
 			<string>Ucaron</string>
 			<string>Upsilon-latin</string>
 			<string>Utilde</string>
 			<string>Gamma-latin</string>
-			<string>Zcircumflex</string>
 			<string>Zmacronbelow</string>
+			<string>Saltillo</string>
 			<string>Ismall</string>
 			<string>acaron</string>
-			<string>astroke</string>
-			<string>chi-latin</string>
-			<string>cstroke</string>
-			<string>emacronacute</string>
-			<string>emacrongrave</string>
 			<string>eopen</string>
 			<string>etilde</string>
 			<string>schwa</string>
 			<string>ezh</string>
-			<string>ezhcaron</string>
 			<string>gamma-latin</string>
 			<string>gcaron</string>
-			<string>glottalstop</string>
-			<string>glottalstopreversed</string>
-			<string>gmacron</string>
+			<string>glottalstopsmall</string>
 			<string>gstroke</string>
 			<string>hdotbelow</string>
 			<string>icaron</string>
@@ -339,64 +315,157 @@
 			<string>itilde</string>
 			<string>kacute</string>
 			<string>kcaron</string>
-			<string>kdotbelow</string>
 			<string>kmacronbelow</string>
 			<string>lambdastroke</string>
 			<string>lbar</string>
-			<string>lbelt</string>
-			<string>ldotbelow</string>
-			<string>lmiddletilde</string>
-			<string>mdotbelow</string>
 			<string>ndotbelow</string>
 			<string>nmacronbelow</string>
 			<string>ocaron</string>
-			<string>omacronacute</string>
-			<string>omacrongrave</string>
-			<string>oogonek</string>
-			<string>oogonekmacron</string>
 			<string>oopen</string>
-			<string>saltillo</string>
 			<string>sdotbelow</string>
-			<string>tdiagonalstroke</string>
 			<string>tmacronbelow</string>
 			<string>ucaron</string>
 			<string>upsilon-latin</string>
 			<string>utilde</string>
-			<string>zcircumflex</string>
 			<string>zmacronbelow</string>
+			<string>saltillo</string>
+			<string>glottalstop</string>
 			<string>wmod</string>
-			<string>clickalveolar</string>
 			<string>zmod</string>
 			<string>commaabovecomb</string>
 			<string>macronbelowcomb</string>
 			<string>lowlinecomb</string>
 			<string>commaturnedmod</string>
-			<string>glottalstopmod</string>
+			<string>Adieresismacron</string>
+			<string>Adotaccent</string>
+			<string>Adotmacron</string>
+			<string>Ainvertedbreve</string>
+			<string>Astroke</string>
+			<string>Bdotaccent</string>
+			<string>Bmacronbelow</string>
 			<string>Ccircumflex</string>
+			<string>Chi-latin</string>
+			<string>Cstroke</string>
+			<string>Einvertedbreve</string>
+			<string>Emacronacute</string>
+			<string>Emacrongrave</string>
+			<string>Estroke</string>
+			<string>Ezhcaron</string>
 			<string>Gcircumflex</string>
+			<string>Gmacron</string>
+			<string>Hcaron</string>
 			<string>Hcircumflex</string>
+			<string>Hdieresis</string>
+			<string>Idieresisacute</string>
+			<string>Iinvertedbreve</string>
 			<string>Jcircumflex</string>
+			<string>Kdotbelow</string>
+			<string>Lbelt</string>
+			<string>Ldotbelow</string>
+			<string>Ldoublebar</string>
+			<string>Lmiddletilde</string>
+			<string>Mdotaccent</string>
+			<string>Mdotbelow</string>
+			<string>Nlongrightleg</string>
+			<string>OU</string>
+			<string>Odieresismacron</string>
+			<string>Odotaccent</string>
+			<string>Odotaccentmacron</string>
+			<string>Oinvertedbreve</string>
+			<string>Omacronacute</string>
+			<string>Omacrongrave</string>
+			<string>Oogonek</string>
+			<string>Oogonekmacron</string>
+			<string>Otildemacron</string>
+			<string>Pacute</string>
+			<string>Pdotaccent</string>
+			<string>Qhooktail</string>
+			<string>Rdblgrave</string>
+			<string>Rinvertedbreve</string>
+			<string>Rmacronbelow</string>
 			<string>Scircumflex</string>
+			<string>Sdotaccent</string>
 			<string>Tbar</string>
 			<string>Tcedilla</string>
+			<string>Tdiagonalstroke</string>
+			<string>Udieresisgrave</string>
+			<string>Uinvertedbreve</string>
+			<string>Umacrondieresis</string>
+			<string>Xdieresis</string>
+			<string>Xdotaccent</string>
 			<string>Ytilde</string>
+			<string>Zcircumflex</string>
+			<string>Zstroke</string>
+			<string>adieresismacron</string>
+			<string>adotaccent</string>
+			<string>adotmacron</string>
+			<string>ainvertedbreve</string>
+			<string>astroke</string>
+			<string>bdotaccent</string>
+			<string>bmacronbelow</string>
 			<string>ccircumflex</string>
+			<string>chi-latin</string>
+			<string>cstroke</string>
+			<string>einvertedbreve</string>
+			<string>emacronacute</string>
+			<string>emacrongrave</string>
+			<string>estroke</string>
+			<string>ezhcaron</string>
 			<string>gcircumflex</string>
+			<string>glottalstopreversed</string>
+			<string>gmacron</string>
+			<string>hcaron</string>
 			<string>hcircumflex</string>
+			<string>hdieresis</string>
 			<string>idotless_ogonek</string>
+			<string>idieresisacute</string>
+			<string>iinvertedbreve</string>
 			<string>jcaron</string>
 			<string>jcircumflex</string>
+			<string>kdotbelow</string>
 			<string>kgreenlandic</string>
+			<string>lbelt</string>
+			<string>ldotbelow</string>
+			<string>ldoublebar</string>
+			<string>lmiddletilde</string>
+			<string>mdotaccent</string>
+			<string>mdotbelow</string>
+			<string>odieresismacron</string>
+			<string>odotaccent</string>
+			<string>odotaccentmacron</string>
+			<string>oinvertedbreve</string>
+			<string>omacronacute</string>
+			<string>omacrongrave</string>
+			<string>oogonek</string>
+			<string>oogonekmacron</string>
+			<string>otildemacron</string>
+			<string>ou</string>
+			<string>pacute</string>
+			<string>pdotaccent</string>
+			<string>qhooktail</string>
+			<string>rdblgrave</string>
+			<string>rinvertedbreve</string>
+			<string>rmacronbelow</string>
 			<string>scircumflex</string>
+			<string>sdotaccent</string>
 			<string>tbar</string>
 			<string>tcedilla</string>
+			<string>tdiagonalstroke</string>
+			<string>udieresisgrave</string>
+			<string>uinvertedbreve</string>
+			<string>umacrondieresis</string>
+			<string>xdieresis</string>
+			<string>xdotaccent</string>
 			<string>ytilde</string>
+			<string>zcircumflex</string>
+			<string>zstroke</string>
 			<string>ymod</string>
 			<string>thetamod</string>
 			<string>degree</string>
 			<string>YturnedSansSerif</string>
 			<string>commaaboverightcomb</string>
 			<string>strokeshortcomb</string>
+			<string>glottalstopmod</string>
 			<string>primemod</string>
 			<string>verticallinemod</string>
 		</array>
@@ -474,9 +543,9 @@
 			<string>Ccedilla</string>
 			<string>Cdotaccent</string>
 			<string>D</string>
-			<string>Eth</string>
 			<string>Dcaron</string>
 			<string>Dcroat</string>
+			<string>Eth</string>
 			<string>E</string>
 			<string>Eacute</string>
 			<string>Ecaron</string>
@@ -586,9 +655,9 @@
 			<string>ccedilla</string>
 			<string>cdotaccent</string>
 			<string>d</string>
-			<string>eth</string>
 			<string>dcaron</string>
 			<string>dcroat</string>
+			<string>eth</string>
 			<string>e</string>
 			<string>eacute</string>
 			<string>ecaron</string>
