Try increase for versioning-strategy

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,5 @@ updates:
   groups:
     python-packages:
       patterns:
-        - gflanguages
+        - "*"
+  versioning-strategy: "increase"
