--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ version: 2
 updates:
 - package-ecosystem: "pip"
   directory: "/"
+  versioning-strategy: "increase-if-necessary"
   schedule:
     interval: "daily"
     time: "13:00"
@@ -14,4 +15,3 @@ updates:
     python-packages:
       patterns:
         - "*"
-  versioning-strategy: "increase"
