Use dev dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install packages
         run: |
-          pip install .
+          pip install .[dev]
           pip install pytest
       - name: Run Tests
         run: |
